feat: pin channel message
